// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: ~20 event fixture > assignRows output matches snapshot 1`] = `
[
  {
    "filename": "a01.md",
    "row": 0,
    "width": 128,
  },
  {
    "filename": "a02.md",
    "row": 0,
    "width": 152,
  },
  {
    "filename": "a03.md",
    "row": 1,
    "width": 144,
  },
  {
    "filename": "a04.md",
    "row": 2,
    "width": 176,
  },
  {
    "filename": "a05.md",
    "row": 3,
    "width": 216,
  },
  {
    "filename": "a06.md",
    "row": 4,
    "width": 120,
  },
  {
    "filename": "a07.md",
    "row": 5,
    "width": 168,
  },
  {
    "filename": "a08.md",
    "row": 6,
    "width": 256,
  },
  {
    "filename": "a09.md",
    "row": 7,
    "width": 192,
  },
  {
    "filename": "a10.md",
    "row": 0,
    "width": 144,
  },
  {
    "filename": "a11.md",
    "row": 1,
    "width": 160,
  },
  {
    "filename": "a12.md",
    "row": 0,
    "width": 120,
  },
  {
    "filename": "a13.md",
    "row": 1,
    "width": 136,
  },
  {
    "filename": "a14.md",
    "row": 0,
    "width": 120,
  },
  {
    "filename": "a15.md",
    "row": 1,
    "width": 360,
  },
  {
    "filename": "a16.md",
    "row": 0,
    "width": 224,
  },
  {
    "filename": "a17.md",
    "row": 2,
    "width": 256,
  },
  {
    "filename": "a18.md",
    "row": 3,
    "width": 248,
  },
  {
    "filename": "a19.md",
    "row": 1,
    "width": 232,
  },
  {
    "filename": "a20.md",
    "row": 0,
    "width": 256,
  },
]
`;

exports[`snapshot: ~20 event fixture > layoutCards output matches snapshot 1`] = `
[
  {
    "filename": "a01.md",
    "isFuture": false,
    "x": 412.5,
  },
  {
    "filename": "a02.md",
    "isFuture": false,
    "x": 612.5,
  },
  {
    "filename": "a03.md",
    "isFuture": false,
    "x": 693.75,
  },
  {
    "filename": "a04.md",
    "isFuture": false,
    "x": 700,
  },
  {
    "filename": "a05.md",
    "isFuture": false,
    "x": 702.08,
  },
  {
    "filename": "a06.md",
    "isFuture": false,
    "x": 704.17,
  },
  {
    "filename": "a07.md",
    "isFuture": false,
    "x": 708.33,
  },
  {
    "filename": "a08.md",
    "isFuture": false,
    "x": 712.5,
  },
  {
    "filename": "a09.md",
    "isFuture": false,
    "x": 716.67,
  },
  {
    "filename": "a10.md",
    "isFuture": false,
    "x": 883.33,
  },
  {
    "filename": "a11.md",
    "isFuture": false,
    "x": 900,
  },
  {
    "filename": "a12.md",
    "isFuture": false,
    "x": 1075,
  },
  {
    "filename": "a13.md",
    "isFuture": false,
    "x": 1091.67,
  },
  {
    "filename": "a14.md",
    "isFuture": false,
    "x": 1200,
  },
  {
    "filename": "a15.md",
    "isFuture": false,
    "x": 1400,
  },
  {
    "filename": "a16.md",
    "isFuture": true,
    "x": 1650,
  },
  {
    "filename": "a17.md",
    "isFuture": true,
    "x": 1675,
  },
  {
    "filename": "a18.md",
    "isFuture": true,
    "x": 1700,
  },
  {
    "filename": "a19.md",
    "isFuture": true,
    "x": 1800,
  },
  {
    "filename": "a20.md",
    "isFuture": true,
    "x": 1900,
  },
]
`;
